# ActiveLib

./: .gitattributes  .gitignore  ActiveLib17.sln  ActiveLib17.vcxproj  ActiveLib17.vcxproj.filters  ActiveLibConfig.cmake.in  CMakeLists.txt  LICENSE.txt  README.md  activelib.pc.in
Active/: CMakeLists.txt  Version.h
Active/Attribute/: CMakeLists.txt  Colour.cpp  Colour.h  Finish.h  Pen.h  TextStyle.h
Active/Container/: CMakeLists.txt  Container.md  HashMap.h  List.h  Map.h  MultiMap.h  Vector.h
Active/Database/: CMakeLists.txt  Concepts.h  Transaction.h
Active/Database/Content/: Record.cpp  Record.h
Active/Database/Identity/: Index.h  Link.h
Active/Database/Storage/: DBaseEngine.h  DBaseSchema.h  RecordCache.cpp  RecordCache.h  SQLiteCore.cpp  SQLiteCore.h  SQLiteEngine.h  Storage.h  TableSchema.h
Active/Database/Storage/SQLite/: SQLiteCore.cpp  SQLiteCore.h  SQLiteEngine.h
Active/Environment/: App.cpp  App.h  CMakeLists.txt
Active/Event/: CMakeLists.txt  Event.h  Event.md  Message.h  Participant.h  PostBox.h  Publisher.cpp  Publisher.h  Subscriber.h
Active/File/: CMakeLists.txt  Directory.cpp  Directory.h  File.cpp  File.h  File.md  Path.cpp  Path.h
Active/File/Interface/: FSNode.cpp  FSNode.h  IOBase.h
Active/Geometry/: Anchor2D.cpp  Anchor2D.h  Arc.cpp  Arc.h  Box.cpp  Box.h  CMakeLists.txt  Faceter.cpp  Faceter.h  Geometry.md  Leveller.cpp  Leveller.h  LinEquation.cpp  LinEquation.h  Line.cpp  Line.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Plane.cpp  Plane.h  Point.cpp  Point.h  PolyEdge.cpp  PolyEdge.h  PolyPoint.cpp  PolyPoint.h  Polygon.cpp  Polygon.h  Position.h  Rotater.cpp  Rotater.h  Rotation.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  Vertex.cpp  Vertex.h  (+5 more)
Active/Primitives/2D/: Layered.h  Path.cpp  Path.h  Point.cpp  Point.h  Primitive.cpp  Primitive.h  Text.cpp  Text.h
Active/Primitives/3D/: Vertex.cpp  Vertex.h
Active/Serialise/: CMakeLists.txt  Cargo.h  CargoHold.h  CargoType.h  Concepts.h  Manager.h  Null.h  Serialisation.md  Transport.cpp  Transport.h  UnboxedTransport.h
Active/Serialise/DOM/: Node.cpp  Node.h
Active/Serialise/Document/: Handler.h  Object.cpp  Object.h  Transportable.h
Active/Serialise/Generic/: Base64Transport.cpp  Base64Transport.h  HexTransport.cpp  HexTransport.h
Active/Serialise/Inventory/: Entry.cpp  Entry.h  Identity.h  Inventory.cpp  Inventory.h
Active/Serialise/Item/: Encoding.h  Item.cpp  Item.h  NullItem.h  UnknownItem.h
Active/Serialise/Item/Wrapper/: AnyValueWrap.cpp  AnyValueWrap.h  FastDoubleWrap.h  ItemWrap.h  ValueItem.h  ValueOptionWrap.h  ValueWrap.h
Active/Serialise/JSON/: JSONTransport.cpp  JSONTransport.h
Active/Serialise/Management/: Management.h  Manager.h
Active/Serialise/Package/: NullPackage.h  Package.h  PackageWrap.h  Pair.cpp  Pair.h  Unknown.h
Active/Serialise/Package/Wrapper/: ContainerBase.h  ContainerWrap.h  Handler.h  Mover.cpp  Mover.h  PackageUniqueWrap.h  PackageUnoWrap.h  PackageWrap.h  ValueSettingWrap.cpp  ValueSettingWrap.h
Active/Serialise/XML/: XMLTransport.cpp  XMLTransport.h
Active/Serialise/XML/Item/: XMLDateTime.cpp  XMLDateTime.h  XMLLength.h  XMLNumber.h
Active/Serialise/XML/Package/: XMLProlog.cpp  XMLProlog.h
Active/Serialise/XML/Package/Wrapper/: XMLValueSetting.cpp  XMLValueSetting.h
Active/Serialise/XML/Package/Wrapper/Geometry/: XMLPoint.cpp  XMLPoint.h  XMLPolyPoint.cpp  XMLPolyPoint.h  XMLPolygon.h
Active/Setting/: CMakeLists.txt  Setting.h  Setting.md  SettingList.cpp  SettingList.h  ValueSetting.cpp  ValueSetting.h
Active/Setting/Values/: BoolValue.h  DoubleValue.h  GuidValue.h  Int32Value.h  Int64Value.h  NullValue.h  StringValue.h  TimeValue.h  UInt32Value.h  Value.cpp  Value.h  ValueBase.h
Active/Setting/Values/Measurement/: AngleValue.cpp  AngleValue.h  AreaValue.h  LengthValue.h  MassValue.h  MeasuredValue.h  VolumeValue.h
Active/Setting/Values/Measurement/Units/: AngleUnit.cpp  AngleUnit.h  AreaUnit.cpp  AreaUnit.h  LengthUnit.cpp  LengthUnit.h  MassUnit.cpp  MassUnit.h  Unit.h  VolumeUnit.cpp  VolumeUnit.h
Active/Utility/: BufferIn.cpp  BufferIn.h  BufferOut.cpp  BufferOut.h  CMakeLists.txt  Cloner.h  Concepts.h  DataFormat.cpp  DataFormat.h  Defer.h  Guid.cpp  Guid.h  MathFunctions.h  Memory.cpp  Memory.h  Mover.h  NameID.cpp  NameID.h  SHA256.cpp  SHA256.h  StackBufferOut.h  String.cpp  String.h  TextEncoding.cpp  TextEncoding.h  Time.cpp  Time.h  UniqueString.cpp  UniqueString.h  Utility.md
ActiveLib.xcodeproj/: project.pbxproj
ActiveLib.xcodeproj/xcshareddata/xcschemes/: ActiveLib-Debug.xcscheme  ActiveLib-Release.xcscheme  ActiveLib-test.xcscheme
ActiveLib.xcworkspace/: contents.xcworkspacedata
ActiveLibDoctest/: ActiveLib-Debug.xctestplan  ActiveLib-Release.xctestplan  ActiveLib17Test.vcxproj  ActiveLib17Test.vcxproj.filters  AttributeTests.cpp  BufferInTests.cpp  CMakeLists.txt  ContainerTests.cpp  FileTests.cpp  GuidTests.cpp  SHA256Tests.cpp  StringTests.cpp  TestingPlatforms.h  TimeTests.cpp  main.cpp
ActiveLibDoctest/EventTests/: Button.cpp  Button.h  CalcApp.cpp  CalcApp.h  CalcIdentity.h  Calculation.cpp  Calculation.h  CalculatorRPN.cpp  CalculatorRPN.h  EventTests.cpp
ActiveLibDoctest/GeometryTests/: PolygonTests.cpp
ActiveLibDoctest/Serialisation/: Base64Tests.cpp  DOMTests.cpp  DocumentTests.cpp  JSONTests.cpp  SerialiseArrayTester.cpp  SerialiseArrayTester.h  SerialiseTester.cpp  SerialiseTester.h  XMLTests.cpp
ActiveLibDoctest/SettingTests/: MeasurementTests.cpp
Documentation/: Doxyfile
